fix: layout shift and load optimizations (#78)
* fix: prevent layout shift and remove unused resources

* fix: accessibility issues like missing img attributes

* fix: replace anchor if element is not link

* fix: search dialog listener script re-execution outside of docs navigation

* fix: version select listener script re-execution outside of docs navigation

* fix: defer blocks example below fold and re-execute kaplay on navigate

* feat: add more fallback font sources

* feat: adjust layout to prevent shift on load

* chore: changelog 1.1.7

--- a/src/styles/base.css
+++ b/src/styles/base.css
@@ -1,12 +1,30 @@
 @import "./pagefind.css";
 
+@font-face {
+    font-family: "Sans Fallback";
+    src: local(Arial), local(Helvetica), sans-serif;
+    size-adjust: 96%;
+    ascent-override: 100%;
+    descent-override: 18%;
+    line-gap-override: 11%;
+}
+
+@font-face {
+    font-family: "Hand Fallback";
+    src: local(Arial Black), local(Gadget), sans-serif;
+    size-adjust: 79%;
+    ascent-override: normal;
+    descent-override: 13%;
+    line-gap-override: 65%;
+    font-weight: 900;
+}
+
 ::view-transition-group(root) {
     animation: none;
 }
 
 body {
     min-height: 100dvh;
-    font-family: "Outfit Variable", sans-serif;
     cursor: url(/cursor_default.png), auto;
 }
 
